--- a/src/stylesheets/Checkbox.css
+++ b/src/stylesheets/Checkbox.css
@@ -32,6 +32,8 @@
   background: #2aa1c0;
 }
 .control:hover input:not([disabled]):checked ~ .control_indicator,
+.control input:checked:focus ~ .control_indicator {
+}
 .control input:disabled ~ .control_indicator {
   background: #e6e6e6;
   opacity: 0.6;
